# coen383

./: .gitignore  CMakeLists.txt  readme.md  run.sh
assignment1/: forktest.c
assignment2/: CMakeLists.txt  FCFS_algorithm.c  FCFS_algorithm.h  Makefile  algorithm.c  algorithm.h  hpf.c  hpq_pe.c  job.c  job.h  main.c  readme.md  round_robin.c  run.c  run.h  run.sh
assignment2/algorithms/: FCFS_algorithm.c  FCFS_algorithm.h  HPF_NP_algorithm.c  HPF_NP_algorithm.h  HPF_P_algorithm.c  HPF_P_algorithm.h  RR_algorithm.c  RR_algorithm.h  SJF_algorithm.c  SJF_algorithm.h  SRT_algorithm.c  SRT_algorithm.h  priority_queue.c  priority_queue.h
assignment3/: CMakeLists.txt  concert.c  concert.cpp  concert.h  customer.cpp  customer.h  main.c  main.cpp  run.sh  seller.cpp  seller.h
assignment4/: CMakeLists.txt  job.cpp  job.h  main.cpp  page.cpp  page.h  readme.md  run.sh
assignment4/algorithms/: FIFO.cpp  FIFO.h  LFU.cpp  LFU.h  LRU.cpp  LRU.h  MFU.cpp  MFU.h  random.cpp  random.h
assignment6/: main.c
